<resources>

    <string name="app_name">Bonsai</string>
    
    <string name="action_settings">Settings</string>
    
    <string name="title_section">Card</string>
    
    <string name="know_button">Knew It!</string>
    
    <string name="dontknow_button">Didn\'t Know It</string>
	
    <string name="start">Start</string>

    <string name="main_menu">Main Menu</string>

    <string name="flash_cards">Flash Cards</string>

    <string name="multiple_choice_">"Multiple Choice "</string>

    <string name="options">Options</string>

    <string name="multiple_choice_menu">Multiple Choice Menu</string>

    <string name="answer_0">state diagram</string>
    <string name="answer_1">scenario</string>
    <string name="answer_2">use case diagram</string>
    <string name="answer_3">requirement</string>

    <string name="question">is a realization of a use-case wherein a specific user executes the use case in a specific way.</string>

    <string name="Options">Options</string>

    <string name="submit">Submit</string>

    

    <string name="timed_quiz">Timed Quiz</string>

    

    <string name="togglebutton">ToggleButton</string>
    
     <string name="options_change_decks">Change Decks</string>
    
     <string name="options_current_deck">Current Deck:</string>
     
     <string name="options_no_deck_selected">No Deck Currently Selected</string>
     
     <string name="main_menu_review_mode">Review Mode</string>
     
     <string name="options_menu_switch_text">Repeat incorrectly answered cards</string>
     <string name="options_Flash_Card_Mode">Flash Card Mode:</string>
      <string name="options_change_quiz_settings">Change Quiz Settings</string>
      
       <string name="resources">Additional Resources</string>
       
       <string name="card_order">Card Order</string>
       <string name="in_order">In Order</string>
       <string name="random">Random</string>
       <string name="hardest_first">Hardest First</string>
       <string name="loading...">Loading&#8230;</string>
       <string name="Deck_Name">Deck Name:</string>
       <string name="Term">Term:</string>
       <string name="Definition">Definition:</string>
       <string name="Edit_Deck">Edit Deck</string>
       
       <string name="Delete_Card">Delete Card:</string>
       <string name="Save_Card">Save Card:</string>
       <string name="Incorrect_Quiz_Answers">Incorrect Quiz Answers:</string>
      
</resources>
