<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/multiple_choice_menu" 
		android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000ff"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_start_multi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toggleButton1"
        android:layout_alignLeft="@+id/button_start_multi"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/toggleButton1"
        android:maxLines="1"
        android:text="@string/timed_quiz"
        android:textColor="#ff0000ff"
        android:textSize="25sp" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="78dp"
        android:layout_toLeftOf="@+id/textView2"
        android:text="@string/togglebutton"
        android:textColor="#ff0000ff" />

</RelativeLayout>
