<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >
  	
    
    <Button
        android:id="@+id/button_flashcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_multi"
        android:layout_centerHorizontal="true"
        android:text="@string/flash_cards"
        android:background="@drawable/blue_button_9_patch"
        android:textColor="#FFFFFF"  />
    
    <Button
        android:id="@+id/button_multi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/multiple_choice_"
        android:background="@drawable/blue_button_9_patch"
        android:textColor="#FFFFFF"  />

    <Button
        android:id="@+id/button_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_multi"
        android:text="@string/options" 
        android:background="@drawable/blue_button_9_patch"
        android:textColor="#FFFFFF" />
    
    

    <Button
        android:id="@+id/button_Review_Mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_flashcard"
        android:layout_centerHorizontal="true"
        android:text="@string/main_menu_review_mode"
        android:background="@drawable/blue_button_9_patch"
        android:textColor="#FFFFFF" 
        />

</RelativeLayout>
